--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/travelpostcard"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lastpostcard">
 
-        <!-- 主入口 Activity（列表页） -->
         <activity
             android:name=".PostcardListActivity"
             android:exported="true">
@@ -24,13 +23,11 @@
             </intent-filter>
         </activity>
 
-        <!-- 创建/编辑明信片的 Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize"/>
 
-        <!-- 明信片详情页 -->
         <activity
             android:name=".PostcardDetailActivity"
             android:exported="false"/>
